<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ContohSpinner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nama"
            android:textSize="19sp"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="insert name"
            android:textSize="19sp"
            android:layout_margin="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_alamat"
            android:textSize="19sp"
            android:layout_margin="4dp"/>
        <EditText
            android:id="@+id/edtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_address"
            android:textSize="19sp"
            android:layout_margin="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_jurusan"
            android:textSize="19sp"
            android:layout_margin="4dp"/>
        <Spinner
            android:id="@+id/spinnerJurusan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/tvClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="click to show"/>

</LinearLayout>